# latin-texts-scrapping

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: indexing_app.py  main.py  scraper_service.py
